log.txt
loremdfdghj wertyhs adfghjs fghjsdc dbnm bsdc wfdhgbn. dsajhbn c csd
 bhjn whjbn hjbn dsjh Matching Java Virtual Machines (4):
    25.0.1 (arm64) "Oracle Corporation" - "Java SE 25.0.1" /Library/Java/JavaVirtualMachines/jdk-25.jdk/Contents/Home
    25.0.1 (arm64) "Oracle Corporation" - "OpenJDK 25.0.1" /Users/tigersawant09/Library/Java/JavaVirtualMachines/openjdk-25.0.1/Contents/Home
    25.0.1 (arm64) "Eclipse Adoptium" - "OpenJDK 25.0.1" /Library/Java/JavaVirtualMachines/temurin-25.jdk/Contents/Home
    21.0.9 (arm64) "Oracle Corporation" - "Java SE 21.0.9" /Library/Java/JavaVirtualMachines/jdk-21.jdk/Contents/Home
tigersawant09@Tigers-MacBook-Air python course % /usr/local/bin/python3 "/Users/tigersawant09/Do
cuments/python course/function.py"
13.333333333333334
tigersawant09@Tigers-MacBook-Air python course % /usr/local/bin/python3 "/Users/tigersawant09/Do
cuments/python course/function.py"
tigersawant09@Tigers-MacBook-Air python course % 3
zsh: command not found: 3
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/function.py"
enter the value22
enter the value33
enter the value44 shweta ß
33.0
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
tigersawant09@Tigers-MacBook-Air python course % 9
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
enter the number33
the factorial of 33 is 
Traceback (most recent call last):
  File "/Users/tigersawant09/Documents/python course/factorial.py", line 8, in <module>
    factorial()
    ~~~~~~~~~^^
TypeError: factorial() missing 1 required positional argument: 'n'
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
enter the number6
the factorial of  is 
Traceback (most recent call last):
  File "/Users/tigersawant09/Documents/python course/factorial.py", line 8, in <module>
    factorial()
    ~~~~~~~~~^^
TypeError: factorial() missing 1 required positional argument: 'n'
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
  File "/Users/tigersawant09/Documents/python course/factorial.py", line 4
    return n * factorial(n-1)
                             ^
IndentationError: unindent does not match any outer indentation level
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
  File "/Users/tigersawant09/Documents/python course/factorial.py", line 4
    return n * factorial(n-1)
                             ^
IndentationError: unindent does not match any outer indentation level
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
enter the number7
the factorial of  is 
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
enter the number7
the factorial of  is 5040 
tigersawant09@Tigers-MacBook-Air python course % /usr/loca
l/bin/python3 "/Users/tigersawant09/Documents/python cours
e/factorial.py"
enter the number6
the factorial of  is 720 
tigersawant09@Tigers-MacBook-Air python course % 